2005-10-24  Sven Herzberg  <herzi@gnome-de.org>

	* Makefile.am: build translations too
	* configure.in: speed tuning for libtool; enable intltool
	* gundo-ui/Makefile.am: build the tree stuff
	* gundo-ui/gundo-popup-model.h: generic header for all tree models
	* gundo-ui/gundo-tool-undo.c: replace the label in the popup with a
	tree
	* gundo-ui/gundo-tool-undo.h: added the popup tree as an attribute
	* gundo-ui/gundo-tree-model-undo.h: started some tree model interface
	stuff
	* po/POTFILES.in: added gundo-tool-undo.c
	* po/de.po: added german translation

2005-10-20  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in: fixed the dependencies for the two libraries
	* demo/Makefile.am: fix dependencies
	* demo/sketch-window.c: fix includes
	* demo/sketch.c: fix includes
	* gundo-ui/Makefile.am: added code to build the ui library separately
	* gundo-ui/gundo-tool-undo.c: fix includes
	* gundo-ui/gundo-ui.c: fix includes and GObject <> GtkObject stuff
	* gundo-ui/gundo-ui.h: fix includes
	* gundo/Makefile.am: removed ui dependent code
	* gundo/gtk-helpers.c,
	* gundo/gtk-helpers.h,
	* gundo/gundo-tool-undo.c,
	* gundo/gundo-tool-undo.h,
	* gundo/gundo-ui.c,
	* gundo/gundo-ui.h: moved to gundo-ui
	* gundo/gundo-sequence.h: extend GObject instead of GtkObject now
	* gundo/gundo.c: extend GObject instead of GtkObject
	* test/tundo.c: use GObject calls; use g_type_init

2005-10-20  Sven Herzberg  <herzi@gnome-de.org>

	* Makefile.am: added gundo-ui to the sub folders
	* configure.in: added gundo-ui to the build folders
	* demo/sketch-window.c: reduce the number of warnings from the code
	* demo/sketch-window.h: reduce the number of warnings from the code
	* doc/tmpl/gundo-tool-undo.sgml: updated to new API
	* test/tundo.c: reduced the number of warnings

2005-10-20  Sven Herzberg  <herzi@gnome-de.org>

	* gundo/gundo-sequence.h: added the gundo-sequence prototypes to a
	separate header file
	* gundo/gundo-tool-undo.c: the popup window is handled as a member of