@@ -7,6 +7,7 @@ lib_LTLIBRARIES=libgundo.la
 
 gundo_HEADERS=\
 	gundo.h \
+	gundo-history.h	\
 	gundo-sequence.h \
 	$(NULL)
 gundodir=$(includedir)/gundo-0.2
@@ -17,7 +18,9 @@ libgundo_la_CPPFLAGS=\
 	$(NULL)
 libgundo_la_SOURCES=\
 	$(gundo_HEADERS) \
+	gobject-helpers.h\
 	gundo.c \
+	gundo-history.c	\
 	$(NULL)
 libgundo_la_LDFLAGS=\
 	-version-info 2:0:2 \
